# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc_code.py  brain_even_code.py  brain_prime_code.py  calc.py  even.py  gcd.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  games.py  gcd.py  prime.py  progression.py
