[project]
name = "hexlet-code"
version = "0.1.0"
description = "This is a Linux app with games to exercise your brain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[project.scripts]
brain-games = "brain_games.scripts.games:main"
even = "brain_games.scripts.even:main"
calc = "brain_games.scripts.calc:main"
gcd = "brain_games.scripts.gcd:main"
progression = "brain_games.scripts.progression:main"
prime = "brain_games.scripts.prime:main"